# interloper-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  codecov.yml  dbos-config.yaml  dockerfile  mkdocs.yml  pyproject.toml  zensical.toml
.claude/: settings.json
.github/workflows/: _checks.yaml  _release.yaml  check_release.yaml  checks.yaml  docs.yaml  lint_pr.yaml  release.yaml
docs/: faq.md  getting-started.md  home.md  index.md  tutorial.md
docs/blog/: .authors.yml
docs/blog/posts/: firstpost.md
docs/features/: backfilling.md  basic.md  cli.md  config.md  data-validation.md  events.md  io.md  partitioning.md  runners.md  schema.md  upstream-assets.md
docs/overrides/: home.html
docs/stylesheets/: extra.css
examples/assets/: adservice.py  adup.py  amazon_ads.py  demo.py
examples/backfillers/: docker_.py  k8s.py  serial.py
examples/cli/: config.json  config.yaml  script.py
examples/io/: bq.py  csv_.py  psql.py
examples/runners/: dbos_.py  docker_.py  k8s.py  multi_process.py  multi_thread.py  serial.py
