# ###############
# PROJECT
# ###############
[project]
name = "interloper-workspace"
version = "0.1.0"
description = "The Interloper Project"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.119.0",
    "interloper",
    "interloper-assets",
    "interloper-dbos",
    "interloper-docker",
    "interloper-google-cloud",
    "interloper-k8s",
    "interloper-pandas",
    "interloper-sql",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyarrow>=10.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.1.1",
    "python-semantic-release>=10.0.0",
    "ruff>=0.9.4",
    "pyright>=1.1.400",
    "zensical>=0.0.24",
]

# ###############
# UV
# ###############
[tool.uv.sources]
interloper = { workspace = true }
interloper-assets = { workspace = true }
interloper-dbos = { workspace = true }
interloper-docker = { workspace = true }
interloper-google-cloud = { workspace = true }
interloper-k8s = { workspace = true }
interloper-pandas = { workspace = true }
interloper-sql = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[[tool.uv.index]]
name = "dc-int-connectors-prd"
url = "https://europe-python.pkg.dev/dc-int-connectors-prd/python-public/simple"
publish-url = "https://europe-python.pkg.dev/dc-int-connectors-prd/python-public"
explicit = true

# ###############
# PYRIGHT
# ###############
[tool.pyright]
include = [
    "packages/interloper/src",
    "packages/interloper-assets/src",
    "packages/interloper-dbos/src",
    "packages/interloper-docker/src",
    "packages/interloper-google-cloud/src",
    "packages/interloper-k8s/src",
    "packages/interloper-pandas/src",
    "packages/interloper-sql/src",
]
typeCheckingMode = "basic"
reportMissingParameterType = true

# ###############
# RUFF
# ###############
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "I", "UP", "ANN001", "ANN201", "ANN202"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**" = ["ANN", "D102"]

# ###############
# PYTEST
# ###############
[tool.pytest.ini_options]
markers = ["integration", "functional"]
addopts = ["--import-mode=importlib", "-m not functional"]
filterwarnings = ["ignore::FutureWarning:google.api_core"]

# ###############
# COVERAGE
# ###############
[tool.coverage.report]
include = ["packages/**/src/**"]
exclude_also = [
    # Don't complain about missing debug-only code:
    # "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

# ################
# SEMANTIC RELEASE
# ################
[tool.semantic_release]
allow_zero_version = true
build_command = "uv build --all-packages"
commit_message = "chore(release): {version} [skip ci]"
version_toml = [
    "pyproject.toml:project.version",
    "packages/interloper/pyproject.toml:project.version",
    "packages/interloper-assets/pyproject.toml:project.version",
    "packages/interloper-dbos/pyproject.toml:project.version",
    "packages/interloper-docker/pyproject.toml:project.version",
    "packages/interloper-google-cloud/pyproject.toml:project.version",
    "packages/interloper-k8s/pyproject.toml:project.version",
    "packages/interloper-pandas/pyproject.toml:project.version",
    "packages/interloper-sql/pyproject.toml:project.version",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
